<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorCardBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="60dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="156dp"
                android:layout_height="156dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorGrey"
                android:contentDescription="@null"
                android:layout_marginBottom="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/name"
                android:textColor="@color/colorInputHint"
                android:textSize="@dimen/text_size_14" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input"
                android:inputType="textImeMultiLine"
                android:maxLines="1"
                android:paddingTop="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="14dp"
                android:textColor="@color/colorInputText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="12dp"
                android:text="@string/location"
                android:textColor="@color/colorInputHint"
                android:textSize="@dimen/text_size_14" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input"
                android:inputType="textImeMultiLine"
                android:maxLines="1"
                android:paddingTop="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="14dp"
                android:textColor="@color/colorInputText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="12dp"
                android:text="@string/email"
                android:textColor="@color/colorInputHint"
                android:textSize="@dimen/text_size_14" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingTop="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="14dp"
                android:textColor="@color/colorInputText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="12dp"
                android:text="@string/banking_info"
                android:textColor="@color/colorInputHint"
                android:textSize="@dimen/text_size_14" />

            <EditText
                android:id="@+id/banking_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input"
                android:paddingTop="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="14dp"
                android:textColor="@color/colorInputText" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                android:text="@string/use_device_location"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorCancel"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/colorInputText"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>